# src/routes/apiRoutes.js
@@ -22,8 +22,16 @@ const {
 const {
   getAnalyticsOverviewApi
 } = require('../controllers/analyticsController');
+const {
+  getHotelPresenceStatusApi,
+  postHotelPresenceHeartbeatApi
+} = require('../controllers/presenceController');
 const { asyncHandler } = require('../middlewares/asyncHandler');
 const { requireAuth, requireRole } = require('../middlewares/auth');
+const {
+  presenceStatusRateLimiter,
+  presenceHeartbeatRateLimiter
+} = require('../middlewares/presence');
 
 const apiRouter = express.Router();
 
@@ -47,6 +55,9 @@ apiRouter.patch('/bookings/:id/status-history/:entryId', requireAuth, asyncHandl
 apiRouter.delete('/bookings/:id/status-history/:entryId', requireAuth, asyncHandler(deleteBookingHistoryEntryApi));
 
 apiRouter.get('/analytics/overview', requireRole('admin'), asyncHandler(getAnalyticsOverviewApi));
+
+apiRouter.get('/hotels/:hotelId/presence/status', presenceStatusRateLimiter, asyncHandler(getHotelPresenceStatusApi));
+apiRouter.post('/hotels/:hotelId/presence/heartbeat', presenceHeartbeatRateLimiter, asyncHandler(postHotelPresenceHeartbeatApi));
 
 module.exports = {
   apiRouter
